--- a/src/main/webapp/WEB-INF/Validation/validation.properties
+++ b/src/main/webapp/WEB-INF/Validation/validation.properties
@@ -2,6 +2,7 @@ validate.user.name = User name cannot be left empty or Cannot contain more than 
 validate.user.phone = Phone numbers can only be digits and should exactly be 10 digits. Or you can leave them empty. 
 validate.user.yearsexperience = Incorrect format: You can only use numbers here
 
-typeMismatch.int={0} Value must be an integer
-typeMismatch.java.lang.Integer={0} must be an integer
-typeMismatch={0} is of invalid format
+typeMismatch.user.yearsexperience=Invalid format
+typeMismatch.yearsexperience=Invalid format
+typeMismatch.java.lang.Integer=Invalid format
+typeMismatch=Invalid format
